# muxi

./: .cursorignore  .cursorrules  .env.example  .gitignore  ARCHITECTURE_EVOLUTION.md  CONTIBUTING.md  CONTIBUTORS.txt  CONTRIBUTOR_LICENSE_AGREEMENT.md  LICENSE-CONTRIBUTORS.txt  LICENSE-FUTURE.txt  LICENSE.txt  NEXT_STEPS.md  PROJECT_STRUCTURE.md  README.md  UPGRADE_NOTES.md  WHITEPAPER.md  Whitepaper.md  agents.html  api.py  architecture.html  changelog.html  cleanup.sh  cli.py  clients.html  contributing.html  development.html  env_check.py  extend.html  fix_imports.sh  index.html  install_dev.sh  intro.html  package_structure.md  pyproject.toml  pytest.ini  reference.html  release-notes.html  requirements-dev.txt  requirements.txt  requirements_analysis.txt  (+11 more)
.context/: active-context.md  product-context.md  progress.md  project-brief.md  project-structure.md  system-patterns.md  tech-context.md
.cursor/: README.md  keybindings.json  settings.json
@core/: conversations.md  mcp-integration.md  memory-systems.md  orchestrator.md  overview.md
agents/: configuration.html  index.html  memory.html  multi-agent.html  simple.html
agents-vs-tools/: index.html
api/: index.html
architecture/: index.html
cli/: index.html
clients/: index.html
configuration-guide/: index.html
contributing/: index.html
core-concepts/: index.html
developer-guide/: index.html
development/: index.html
docs/: Gemfile  _config.yml  agent.md  agents-vs-tools.md  agents.md  agents_vs_tools.md  api.md  architecture.md  changelog.md  cli.md  configuration-guide.md  contributing.md  core-concepts.md  developer_guide.md  domain-knowledge.md  getting-started.md  index.md  mcp-servers.md  mcp.md  memory.md  models.md  multi-modal.md  orchestrator.md  overview.md  package_structure.md  quick_start.md  quickstart.md  release-notes.md  resources.md  roadmap.md  testing.md  toc.md  tools-vs-mcp.md  tools.md  tools_vs_mcp.md  user-interfaces.md  user_guide.md  webapp.md  websocket.md
domain-knowledge/: index.html
examples/: README.md  basic_usage.py  config_based_agent.py  multi_agent.py  simple_agent.py  websocket_client.py
extend/: index.html  knowledge.html  mcp.html
extensions/: README.md
getting-started/: index.html  installation.html
ideas/: api.md  (+7 more)
(+352 files in other folders)
