[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "muxi"
version = "0.0.1"
authors = [
  {name = "MUXI Team", email = "muxi@automaze.io"},
]
description = "A powerful, extensible framework for building AI agents"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "aiohttp>=3.8.0",
    "asyncio>=3.4.3",
    "click>=8.1.0",
    "fastapi>=0.108.0",
    "openai>=1.3.0",
    "pgvector>=0.2.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "rich>=13.5.0",
    "sqlalchemy>=2.0.0",
    "uvicorn>=0.24.0",
    "websockets>=11.0.0",
]

[project.urls]
"Homepage" = "https://github.com/ranaroussi/muxi"
"Bug Tracker" = "https://github.com/ranaroussi/muxi/issues"

[project.scripts]
muxi = "muxi.cli:main"

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
